--- a/server/Pipfile
+++ b/server/Pipfile
@@ -7,6 +7,9 @@ verify_ssl = true
 
 [packages]
 django = "*"
+djangorestframework = "*"
+django-rest-auth = "*"
+django-allauth = "*"
 
 [requires]
 python_version = "3.6"
